--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
             integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
             crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
     <title>My Landing Page</title>
 </head>
 <body>
-<nav id="navbar">
+<nav>
     <div class="logo">
-        <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="user" />
+        <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="user">
     </div>
     <ul>
         <li><a href="#">Home</a></li>
@@ -27,16 +27,12 @@
 </nav>
 
 <header>
-    <button id="toggle" class="toggle">
+    <buttom id="toggle" class="toggle">
         <i class="fa fa-bars fa-2x"></i>
-    </button>
+    </buttom>
 
     <h1>My Landing Page</h1>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, amet!
-    </p>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, amet!</p>
     <button class="cta-btn" id="open">Sign Up</button>
 </header>
 
@@ -82,7 +78,6 @@
     </p>
 </div>
 
-<!-- Modal -->
 <div class="modal-container" id="modal">
     <div class="modal">
         <button class="close-btn" id="close">
@@ -93,44 +88,24 @@
         </div>
         <div class="modal-content">
             <p>Register with us to get offers, support and more</p>
-            <form class="modal-form">
+            <form action="" class="modal-form">
                 <div>
                     <label for="name">Name</label>
-                    <input
-                            type="text"
-                            id="name"
-                            placeholder="Enter Name"
-                            class="form-input"
-                    />
+                    <input type="text" id="name" placeholder="Enter Name">
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input
-                            type="email"
-                            id="email"
-                            placeholder="Enter Email"
-                            class="form-input"
-                    />
+                    <input type="email" id="email" placeholder="Enter Email">
                 </div>
                 <div>
                     <label for="password">Password</label>
-                    <input
-                            type="password"
-                            id="password"
-                            placeholder="Enter Password"
-                            class="form-input"
-                    />
+                    <input type="password" id="password" placeholder="Enter Password">
                 </div>
                 <div>
                     <label for="password2">Confirm Password</label>
-                    <input
-                            type="password"
-                            id="password2"
-                            placeholder="Confirm Password"
-                            class="form-input"
-                    />
+                    <input type="password" id="password2" placeholder="Confirm Password">
                 </div>
-                <input type="submit" value="Submit" class="submit-btn" />
+                <input type="submit" value="Submit" class="submit-btn">
             </form>
         </div>
     </div>
