--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
             crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
     <title>My Landing Page</title>
 </head>
 <body>
@@ -27,9 +28,9 @@
 </nav>
 
 <header>
-    <buttom id="toggle" class="toggle">
+    <button id="toggle" class="toggle">
         <i class="fa fa-bars fa-2x"></i>
-    </buttom>
+    </button>
 
     <h1>My Landing Page</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, amet!</p>
@@ -91,19 +92,19 @@
             <form action="" class="modal-form">
                 <div>
                     <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Enter Name">
+                    <input type="text" id="name" class="form-input" placeholder="Enter Name">
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Enter Email">
+                    <input type="email" id="email" class="form-input" placeholder="Enter Email">
                 </div>
                 <div>
                     <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="Enter Password">
+                    <input type="password" id="password" class="form-input" placeholder="Enter Password">
                 </div>
                 <div>
                     <label for="password2">Confirm Password</label>
-                    <input type="password" id="password2" placeholder="Confirm Password">
+                    <input type="password" id="password2" class="form-input" placeholder="Confirm Password">
                 </div>
                 <input type="submit" value="Submit" class="submit-btn">
             </form>
